--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
 
-        <link rel="stylesheet" href="css/icon-font.css">
         <link rel="stylesheet" href="css/style.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
         
@@ -26,5 +25,96 @@
                 <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
             </div>
         </header>
+        <main>
+            <section class="section-about">
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">
+                        Exiting tours for adventurous people
+                    </h2> 
+                </div>
+                <div class="row">
+                    <div class="col-1-of-2">
+                       <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
+                       <p class="paragraph">
+                           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum omnis mollitia dignissimos eius laboriosam impedit aut debitis, non, et vel ipsa totam. Alias corporis, reprehenderit quo eligendi obcaecati a voluptas.
+                       </p>
+                       <h3 class="heading-tertiary u-margin-bottom-small">Live adventurous like you never have</h3>
+                       <p class="paragraph">
+                           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam nemo vel, nisi obcaecati consequatur officiis repellat exercitationem odit tenetur!
+                       </p>
+                       <a href="#" class="btn-text">Learm more &rarr;</a>
+                    </div>
+                    <div class="col-1-of-2">
+                        <div class="composition">
+                            <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+                            <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+                            <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
+        <!--<section>
+            <div class="row">
+                <div class="col-1-of-2">
+                    col 1 of 2
+                </div>
+                <div class="col-1-of-2 no-h-gutters">
+                    col 1 of 2
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1-of-3">
+                    col 1 of 3
+                </div>
+                <div class="col-1-of-3">
+                    col 1 of 3
+                </div>
+                <div class="col-1-of-3">
+                    col 1 of 3
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1-of-3">
+                    col 1 of 3
+                </div>
+                <div class="col-2-of-3">
+                    col 2 of 3
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1-of-4">
+                    col 1 of 4
+                </div>
+                <div class="col-1-of-4">
+                    col 1 of 4
+                </div>
+                <div class="col-1-of-4">
+                    col 1 of 4
+                </div>
+                <div class="col-1-of-4">
+                    col 1 of 4
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1-of-4">
+                    col 1 of 4
+                </div>
+                <div class="col-1-of-4">
+                    col 1 of 4
+                </div>
+                <div class="col-2-of-4">
+                    col 2 of 4
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1-of-4">
+                    col 1 of 4
+                </div>
+                <div class="col-3-of-4">
+                    col 3 of 4
+                </div>
+            </div>
+        </section>-->
     </body>
 </html>
