--- a/index.html
+++ b/index.html
@@ -93,68 +93,26 @@
                     </div>
                 </div>                  
             </section>
+            <section class="section-tours">
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">
+                        Most popular tours
+                    </h2> 
+                </div>
+                <div class="row">
+                    <div class="col-1-of-3">
+                        <div class="card">
+                            text
+                        </div>
+                    </div>
+                    <div class="col-1-of-3">
+
+                    </div>
+                    <div class="col-1-of-3">
+
+                    </div>
+                </div>
+            </section>
         </main>
-        <!--<section>
-            <div class="row">
-                <div class="col-1-of-2">
-                    col 1 of 2
-                </div>
-                <div class="col-1-of-2 no-h-gutters">
-                    col 1 of 2
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-1-of-3">
-                    col 1 of 3
-                </div>
-                <div class="col-1-of-3">
-                    col 1 of 3
-                </div>
-                <div class="col-1-of-3">
-                    col 1 of 3
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-1-of-3">
-                    col 1 of 3
-                </div>
-                <div class="col-2-of-3">
-                    col 2 of 3
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-1-of-4">
-                    col 1 of 4
-                </div>
-                <div class="col-1-of-4">
-                    col 1 of 4
-                </div>
-                <div class="col-1-of-4">
-                    col 1 of 4
-                </div>
-                <div class="col-1-of-4">
-                    col 1 of 4
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-1-of-4">
-                    col 1 of 4
-                </div>
-                <div class="col-1-of-4">
-                    col 1 of 4
-                </div>
-                <div class="col-2-of-4">
-                    col 2 of 4
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-1-of-4">
-                    col 1 of 4
-                </div>
-                <div class="col-3-of-4">
-                    col 3 of 4
-                </div>
-            </div>
-        </section>-->
     </body>
 </html>
