--- a/index.html
+++ b/index.html
@@ -244,6 +244,58 @@
                     </div>
                 </div>
             </section>
+            <section class="section-stories">
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">
+                        We make people genuinely happy
+                    </h2>
+                </div>
+                <div class="row">
+                    <div class="story">
+                        <figure class="story__shape">
+                            <div class="story__image story__image--1"></div>
+                            <figcaption class="story__caption">
+                                Mary Smith
+                            </figcaption>
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading-tertiary u-margin-bottom-small">
+                                I had the best week ever with my family
+                            </h3>
+                            <p class="paragraph">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Magnam amet quae animi blanditiis? Modi expedita rem excepturi laborum, 
+                                consequuntur accusamus commodi sunt assumenda consequatur perferendis, 
+                                qui autem reiciendis laudantium eligendi.Lorem ipsum dolor sit amet. 
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="story">
+                        <figure class="story__shape">
+                            <div class="story__image story__image--3"></div>
+                            <figcaption class="story__caption">
+                                Jack Wilson
+                            </figcaption>
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading-tertiary u-margin-bottom-small">
+                                WOW! My life is completely different now
+                            </h3>
+                            <p class="paragraph">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Magnam amet quae animi blanditiis? Modi expedita rem excepturi laborum, 
+                                consequuntur accusamus commodi sunt assumenda consequatur perferendis, 
+                                qui autem reiciendis laudantium eligendi.Lorem ipsum dolor sit amet. 
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="u-center-text u-margin-bottom-big">
+                    <a href="#" class="btn-text">Read all stories &rarr;</a>
+                </div>
+            </section>
         </main>
     </body>
 </html>
