--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$897</p>
                                     </div>
-                                   
+                                    <a href="#" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -245,6 +245,13 @@
                 </div>
             </section>
             <section class="section-stories">
+                <div class="bg-video">
+                    <video class="bg-video__content" autoplay muted loop>
+                        <source src="img/video.mp4" type="video/mp4">
+                        <source src="img/video.webm" type="video/webm">
+                        Your browser is not supported!
+                    </video>
+                </div>
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         We make people genuinely happy
