--- a/index.html
+++ b/index.html
@@ -303,6 +303,84 @@
                     <a href="#" class="btn-text">Read all stories &rarr;</a>
                 </div>
             </section>
+            <section class="section-book">
+                <div class="row">
+                    <div class="book">
+                        <div class="book__form">
+                            <form action="#" class="form">
+                                <div class="u-margin-bottom-medium">
+                                    <h2 class="heading-secondary">
+                                        Start booking now
+                                    </h2>
+                                </div>
+                                <div class="form__group">
+                                    <input type="text" class="form__input" placeholder="Full name" id="name" required>
+                                    <label for="name" class="form__label">Full name</label>
+                                </div>
+                                <div class="form__group">
+                                    <input type="email" class="form__input" placeholder="Email address" id="email" required>
+                                    <label for="email" class="form__label">Email address</label>
+                                </div>
+                                <div class="form__group u-margin-bottom-medium">
+                                    <div class="form__radio-group">
+                                        <input type="radio" class="form__radio-input" id="small" name="size">
+                                        <label for="small" class="form__radio-label">
+                                            <span class="form__radio-button"></span>
+                                            Small tour group
+                                        </label>
+                                    </div>
+                                    <div class="form__radio-group">
+                                        <input type="radio" class="form__radio-input" id="large" name="size">
+                                        <label for="large" class="form__radio-label">
+                                            <span class="form__radio-button"></span>
+                                            Large tour group
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="form__group">
+                                    <button class="btn btn--green">
+                                        Next step &rarr;
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
+        <footer class="footer">
+            <div class="footer__logo-box">
+                <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo">
+            </div>
+            <div class="row">
+                <div class="col-1-of-2">
+                    <div class="footer__navigation">
+                        <ul class="footer__list">
+                            <li class="footer__item">
+                                <a href="#" class="footer__link">company</a>
+                            </li>
+                            <li class="footer__item">
+                                <a href="#" class="footer__link">contact us</a>
+                            </li>
+                            <li class="footer__item">
+                                <a href="#" class="footer__link">carrers</a>
+                            </li>
+                            <li class="footer__item">
+                                <a href="#" class="footer__link">privacy policy</a>
+                            </li>
+                            <li class="footer__item">
+                                <a href="#" class="footer__link">terms</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-1-of-2">
+                    <p class="footer__copyright">
+                        Lorem ipsum dolor sit amet <a href="#" class="footer__link">consectetur</a> , adipisicing elit. Quia excepturi rerum quis id quo dolor facere natus ut. Ratione pariatur fugit sunt dolore distinctio! Doloremque eum beatae
+                        fuga amet, nisi, voluptatem et natus quasi nam ut at. Aspernatur, quibusdam ex? Facere repellat assumenda saepe repellendus, amet porro earum dolor rerum?
+                    </p>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
