--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <span class="heading-primary--sub">is where life happens</span>
                 </h1>
 
-                <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+                <a href="#section-tours" class="btn btn--white btn--animated">Discover our tours</a>
             </div>
         </header>
         <main>
@@ -152,7 +152,7 @@
                     </div>
                 </div>
             </section>
-            <section class="section-tours">
+            <section class="section-tours" id="section-tours">
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         Most popular tours
@@ -186,7 +186,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$297</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -218,7 +218,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$497</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -250,7 +250,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$897</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -400,5 +400,33 @@
                 </div>
             </div>
         </footer>
+        <div class="popup" id="popup">
+            <div class="popup__content">
+                <div class="popup__left">
+                    <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+                    <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+                </div>
+                <div class="popup__right">
+                    <a href="#section-tours" class="popup__close">&times;</a>
+                    <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+                    <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+                    <p class="popup__text u-margin-bottom-medium">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores fuga rem odit excepturi et 
+                        voluptatum repellendus quae tenetur dolores, 
+                        blanditiis accusamus ad? Consectetur quam dolor eius odio. Minima, repellendus incidunt a 
+                        pariatur aut deserunt fuga neque ab, commodi quidem porro?
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores fuga rem odit excepturi et 
+                        voluptatum repellendus quae tenetur dolores, 
+                        blanditiis accusamus ad? Consectetur quam dolor eius odio. Minima, repellendus incidunt a 
+                        pariatur aut deserunt fuga neque ab, commodi quidem porro?
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores fuga rem odit excepturi et 
+                        voluptatum repellendus quae tenetur dolores, 
+                        blanditiis accusamus ad? Consectetur quam dolor eius odio. Minima, repellendus incidunt a 
+                        pariatur aut deserunt fuga neque ab, commodi quidem porro?
+                    </p>
+                    <a href="#" class="btn btn--green">Book now</a>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
